--- a/git_test/git_test.csproj
+++ b/git_test/git_test.csproj
@@ -148,6 +148,35 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\images\1.jpg" />
+    <Content Include="App_Data\images\1444.jpg" />
+    <Content Include="App_Data\images\1894.jpg" />
+    <Content Include="App_Data\images\2.jpg" />
+    <Content Include="App_Data\images\699.jpg" />
+    <Content Include="App_Data\images\845.jpg" />
+    <Content Include="App_Data\images\847.jpg" />
+    <Content Include="App_Data\images\848.jpg" />
+    <Content Include="App_Data\images\849.jpeg" />
+    <Content Include="App_Data\images\850.jpg" />
+    <Content Include="App_Data\images\851.jpeg" />
+    <Content Include="App_Data\images\851.jpg" />
+    <Content Include="App_Data\images\bg1.png" />
+    <Content Include="App_Data\images\bg10.png" />
+    <Content Include="App_Data\images\bg2.png" />
+    <Content Include="App_Data\images\bg3.png" />
+    <Content Include="App_Data\images\bg4.png" />
+    <Content Include="App_Data\images\bg5.png" />
+    <Content Include="App_Data\images\bg6.png" />
+    <Content Include="App_Data\images\bg7.png" />
+    <Content Include="App_Data\images\bg8.png" />
+    <Content Include="App_Data\images\bg9.png" />
+    <Content Include="App_Data\images\header.jpg" />
+    <Content Include="App_Data\images\header2.jpg" />
+    <Content Include="App_Data\images\logo.png" />
+    <Content Include="App_Data\images\logo2.jpg" />
+    <Content Include="App_Data\images\OCDBCU0.jpg" />
+    <Content Include="App_Data\images\post1.jpg" />
+    <Content Include="App_Data\images\stamp.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -186,7 +215,6 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
