--- a/git_test/git_test.csproj
+++ b/git_test/git_test.csproj
@@ -148,41 +148,27 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\images\1.jpg" />
-    <Content Include="Views\images\1444.jpg" />
-    <Content Include="Views\images\1894.jpg" />
-    <Content Include="Views\images\2.jpg" />
-    <Content Include="Views\images\699.jpg" />
-    <Content Include="Views\images\845.jpg" />
-    <Content Include="Views\images\847.jpg" />
-    <Content Include="Views\images\848.jpg" />
-    <Content Include="Views\images\849.jpeg" />
-    <Content Include="Views\images\850.jpg" />
-    <Content Include="Views\images\851.jpeg" />
-    <Content Include="Views\images\851.jpg" />
-    <Content Include="Views\images\bg1.png" />
-    <Content Include="Views\images\bg10.png" />
-    <Content Include="Views\images\bg2.png" />
-    <Content Include="Views\images\bg3.png" />
-    <Content Include="Views\images\bg4.png" />
-    <Content Include="Views\images\bg5.png" />
-    <Content Include="Views\images\bg6.png" />
-    <Content Include="Views\images\bg7.png" />
-    <Content Include="Views\images\bg8.png" />
-    <Content Include="Views\images\bg9.png" />
-    <Content Include="Views\images\header.jpg" />
-    <Content Include="Views\images\header2.jpg" />
-    <Content Include="Views\images\logo.png" />
-    <Content Include="Views\images\logo2.jpg" />
-    <Content Include="Views\images\OCDBCU0.jpg" />
-    <Content Include="Views\images\post1.jpg" />
-    <Content Include="Views\images\stamp.png" />
+    <Content Include="images\1894.jpg" />
+    <Content Include="images\2.jpg" />
+    <Content Include="images\699.jpg" />
+    <Content Include="images\847.jpg" />
+    <Content Include="images\848.jpg" />
+    <Content Include="images\849.jpeg" />
+    <Content Include="images\850.jpg" />
+    <Content Include="images\851.jpeg" />
+    <Content Include="images\851.jpg" />
+    <Content Include="images\header.jpg" />
+    <Content Include="images\header2.jpg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\logo.png" />
+    <Content Include="images\logo2.jpg" />
+    <Content Include="images\post1.jpg" />
+    <Content Include="images\stamp.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
