--- a/git_test/git_test.csproj
+++ b/git_test/git_test.csproj
@@ -165,10 +165,9 @@
     <Content Include="images\849.jpeg" />
     <Content Include="images\850.jpg" />
     <Content Include="images\851.jpg" />
+    <Content Include="images\852.jpg" />
+    <Content Include="images\853.png" />
     <Content Include="images\bg5.png" />
-    <Content Include="images\h1.jpg" />
-    <Content Include="images\h2.jpg" />
-    <Content Include="images\h3.jpg" />
     <Content Include="images\h4.jpg" />
     <Content Include="images\h6.jpg" />
     <Content Include="images\header.jpeg" />
@@ -179,7 +178,10 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="images\logo.png" />
-    <Content Include="images\stamp.png" />
+    <Content Include="images\t1.png" />
+    <Content Include="images\t2.png" />
+    <Content Include="images\t3.png" />
+    <Content Include="images\t4.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -192,6 +194,7 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\counterup.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -200,8 +203,11 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\navigation.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\scroll.js" />
+    <Content Include="Scripts\waypoints.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
