funkcja dodaj przedmiot
naprawa funkcji

--- a/git_test/Views/Web.config
+++ b/git_test/Views/Web.config
@@ -21,7 +21,9 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
-
+  <connectionStrings>
+    <add name="SocialswapConnectionString" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SocialSwapDb;Integred Security=SSPI;" providerName="System.Data.SqlClient"></add>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
