--- a/git_test/git_test.csproj
+++ b/git_test/git_test.csproj
@@ -258,6 +258,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\AddThing.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Select.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
